fix layout bug in terms and conditions

--- a/app/assets/stylesheets/components/_session_form.scss
+++ b/app/assets/stylesheets/components/_session_form.scss
@@ -60,7 +60,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 0 8px 10px;
+    margin: 10px 0 8px 0;
   }
   &-termsAndConditionsLink {
     color: $primary;
